Bug 1839852 - Allow access to LD_LIBRARY_PATH from Utility process r=gcp, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D181767